webmanifest screenshots/themes, fixed lastused component not redirecting to main

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Sticky Hours" />
   <link rel="manifest" href="/site.webmanifest" />
+
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#dae6d9" />
+  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#141e16" />
 </head>
 
 <body class="mat-typography">
